#0,1,0,20210722
	Submit to Backburner Operator now create a seprate temp file for render.
	Backburner has an option for submit as suspended or not.
	Pre/Post Render Script operator added under Render Properties/Script.
	Note: just write the name of script in text editor for Pre/Post Render script.

#0,1,0,20210715
	Multiple Hair cache combine operator added to automate the index switch.
	Add a new mode for keep Blender mode keymaps completly untoched.

#0,1,0,20210714
	'bpy.utils.user_resource' issue fixed.

#0,1,0,20210614
	Selection set Copy/past issue fixed.
	Selection set interface simplified.
	'Ctrl + K' Insert Keyframe menu (Max mode).
	'Alt + K' Delete Key (Max mode).
	'Ctrl + Shift + K' 'Set Key Filter' (max mode).
	'Set Key Filter' added to Time slider.

#0,1,0,20210611
	Transfer tool for Rigg Selection set to other Rigg 'Pose mode: Right Panel/Tool/Selection(Pose bone)/Transform/(Copy/Past)'

#0,1,0,20210606
	Auto library override issue fixer caused to crash on heavy secens, disabled for now.

#0,1,0,20210604
	BsMax works with Blender defult with Rightclick select mode too.
	Fix library override issue fix on render time automaticaly.

#0,1,0,20210525
	Light lister list materials with emission (Editable only if Color or Strength slot are free).

#0,1,0,20210517
	'OpenGL Depth Picking' Autodisable is optinal (Search for 'Auto Use Select Pick Depth Toggle' off by default)

#0,1,0,20210511
	'OpenGL Depth Picking' Automaticly disable on Pose mode to speed up bone selecting.
	'C' Camera search fits camera frame to view too (3DsMax Mode).
	Timeline Red bar back with no crash.

#0,1,0,20210510
	Light/Camera lister Improved.
	'Freeze On' Repeat count issue fixed.

#0,1,0,20210506
	'Freeze On' improved ('Animation/Freeze On')

#0,1,0,20210505
	'Freeze On' Fix an IK controller in position for wanted frame range 'Animation/Freeze On'.

#0,1,0,20210503
	'W,E,R' auto Coordinate Toggle 'World/Local' disabled by default. 'Ctrl+W' for Active/Deactive (3DsMax mode).
